--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui" {
+  themes: night --default;
+  include: ;
+  exclude: ;
+  logs: true;
+}
 
 :root {
   --background: #ffffff;
